; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_canal.c_add_string_ref.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_canal.c_add_string_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_9__*, i32 }
%struct.TYPE_9__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i64 }

@UT64_MAX = common dso_local global i64 0, align 8
@R_ANAL_REF_TYPE_DATA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"str.%s\00", align 1
@R_FLAGS_FS_STRINGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*, i64, i64)* @add_string_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_string_ref(%struct.TYPE_8__* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @UT64_MAX, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %16, label %13

13:                                               ; preds = %3
  %14 = load i64, i64* %6, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %13, %3
  br label %79

17:                                               ; preds = %13
  %18 = load i64, i64* %5, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %17
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* @UT64_MAX, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %32

24:                                               ; preds = %20, %17
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  store i64 %31, i64* %5, align 8
  br label %32

32:                                               ; preds = %24, %20
  %33 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %34 = load i64, i64* %6, align 8
  %35 = call i8* @is_string_at(%struct.TYPE_8__* %33, i64 %34, i32* %7)
  store i8* %35, i8** %8, align 8
  %36 = load i8*, i8** %8, align 8
  %37 = icmp ne i8* %36, null
  br i1 %37, label %38, label %79

38:                                               ; preds = %32
  %39 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %39, i32 0, i32 0
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %40, align 8
  %42 = load i64, i64* %5, align 8
  %43 = load i64, i64* %6, align 8
  %44 = load i32, i32* @R_ANAL_REF_TYPE_DATA, align 4
  %45 = call i32 @r_anal_xrefs_set(%struct.TYPE_9__* %41, i64 %42, i64 %43, i32 %44)
  %46 = load i8*, i8** %8, align 8
  %47 = call i32 @r_name_filter(i8* %46, i32 -1)
  %48 = load i8*, i8** %8, align 8
  %49 = call i8* @sdb_fmt(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %48)
  store i8* %49, i8** %9, align 8
  %50 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %51 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %50, i32 0, i32 1
  %52 = load i32, i32* %51, align 8
  %53 = load i32, i32* @R_FLAGS_FS_STRINGS, align 4
  %54 = call i32 @r_flag_space_push(i32 %52, i32 %53)
  %55 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %56 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %55, i32 0, i32 1
  %57 = load i32, i32* %56, align 8
  %58 = load i8*, i8** %9, align 8
  %59 = load i64, i64* %6, align 8
  %60 = load i32, i32* %7, align 4
  %61 = call i32 @r_flag_set(i32 %57, i8* %58, i64 %59, i32 %60)
  %62 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %63 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %62, i32 0, i32 1
  %64 = load i32, i32* %63, align 8
  %65 = call i32 @r_flag_space_pop(i32 %64)
  %66 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %67 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %66, i32 0, i32 0
  %68 = load %struct.TYPE_9__*, %struct.TYPE_9__** %67, align 8
  %69 = load i64, i64* %6, align 8
  %70 = load i64, i64* %6, align 8
  %71 = load i32, i32* %7, align 4
  %72 = sext i32 %71 to i64
  %73 = add nsw i64 %70, %72
  %74 = trunc i64 %73 to i32
  %75 = load i8*, i8** %8, align 8
  %76 = call i32 @r_meta_add(%struct.TYPE_9__* %68, i8 signext 115, i64 %69, i32 %74, i8* %75)
  %77 = load i8*, i8** %8, align 8
  %78 = call i32 @free(i8* %77)
  br label %79

79:                                               ; preds = %16, %38, %32
  ret void
}

declare dso_local i8* @is_string_at(%struct.TYPE_8__*, i64, i32*) #1

declare dso_local i32 @r_anal_xrefs_set(%struct.TYPE_9__*, i64, i64, i32) #1

declare dso_local i32 @r_name_filter(i8*, i32) #1

declare dso_local i8* @sdb_fmt(i8*, i8*) #1

declare dso_local i32 @r_flag_space_push(i32, i32) #1

declare dso_local i32 @r_flag_set(i32, i8*, i64, i32) #1

declare dso_local i32 @r_flag_space_pop(i32) #1

declare dso_local i32 @r_meta_add(%struct.TYPE_9__*, i8 signext, i64, i32, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
